# ringss_restore_profile

./: .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  aberration.py  environment.yml  nightlist.py  nightproc.py  pyproject.toml  readstarcat.py  readstm.py  requirements.txt  setup.cfg  starcat.json  tox.ini
.github/workflows/: codeql.yml  python-package.yml  python-publish.yml
docs/: conf.py  index.rst
docs/api/: modules.rst  ringss_restore_profile.core.rst  ringss_restore_profile.core.tests.rst  ringss_restore_profile.legacy.rst  ringss_restore_profile.rst
ringss_restore_profile/core/: __init__.py  aberration.py  aweight.py  core.py  cube2.py  getimage.py  getweight5.py  getweights.py  getzen.py  nightlist.py  nightproc.py  profrest5.py  readstarcat.py  readstm.py  restore_profile.py  test9b.py
ringss_restore_profile/core/tests/: test_core.py
ringss_restore_profile/data/: par-tololo.json  weights.json  zmat.json
ringss_restore_profile/legacy/: cube2.py
ringss_restore_profile/restore_profile/: core.py  read_moments.py  restore.py  star.py
