[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.coverage]
    [tool.coverage.run]
    omit = [
        '__init__.py',
        'tests/*',
        '*/tests/*',
        '*test_*'
    ]

    [tool.coverage.report]
    skip_empty = true